<resources>
    <string name="app_name">WeTalk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="chats_fragment">Chats Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="search_item">search_item</string>
    <string name="settings">Settings</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="user_name">user name</string>
    <string name="status">status</string>
    <string name="update">update</string>
    <string name="edit_profile_pic_item">edit_profile_pic_item</string>
    <string name="settings_back">settings_back</string>
    <string name="search">Search</string>
    <string name="search_txt">Search...</string>
    <string name="welcome_to_wetalk">Welcome To WeTalk</string>
    <string name="continue_btn">Continue</string>
    <string name="wetalk_will_send_you_sms_message_to_verify_your_phone_number">WeTalk will send you SMS message to verify your phone number.</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="profile_information">Profile information</string>
    <string name="attach_a_profile_picture_optional_and_type_your_name">Attach a profile picture (optional) and type your name</string>
    <string name="next">next</string>
    <string name="decline">Decline</string>
    <string name="delete_account">Delete Account</string>
    <string name="USERS">Users</string>
    <string name="IMAGE">image</string>
    <string name="NAME">name</string>
    <string name="PHONE">phone</string>
    <string name="UPDATE_MESSAGE">Please set and update profile information...</string>
    <string name="ERROR">Error :</string>
    <string name="PROFILE_UPDATED">Profile updated</string>
    <string name="STATUS">status</string>
    <string name="USER_NAME_MISSING">User name is missing...</string>
    <string name="STATUS_MISSING">Status is missing...</string>
    <string name="JPG">.jpg</string>
    <string name="SET_PROFILE_IMAGE">Set Profile Image</string>
    <string name="PLEASE_WAIT_PROFILE_UPDATED">Please wait, your profile image is updating...</string>
    <string name="PROFILE_IMAGE_UPLOADED_SUCCESS">Profile image uploaded successfully...</string>
    <string name="PROFILE_IMAGES">Profile Images</string>
    <string name="ENTER_YOUR_PHONE_NUMBER">Enter your phone number</string>
    <string name="YOUR_LOGGED_IN_SUCCESS">You are logged in successfully...</string>
    <string name="INVALID_PHONE_NUMBER">Invalid phone number, please enter correct phone number with your country code...</string>
    <string name="CODE_HAS_BEEN_SENT">Code has been sent, please check and verify...</string>
    <string name="WRITE_VERIFICATION_CODE">Please write verification code first...</string>
    <string name="PLEASE_WAIT">please wait while we verifying verification code...</string>
    <string name="VERIFICATION_CODE">Verification Code</string>
    <string name="PLEASE_ENTER_VALID">Please enter valid phone number ...</string>
    <string name="DELETE_ACCOUNT">Delete Account</string>
    <string name="PLEASE_WAIT_WHILE_WE_DELETE_YOUR_ACCOUNT">Please wait while we delete your account information...</string>
    <string name="name">Name</string>
    <string name="this_name_will_be_visible_to_your_contacts">This name will be visible to your contacts.</string>
    <string name="about">About</string>
    <string name="user_status">user status</string>
    <string name="cellphone_number">Cellphone Number</string>
    <string name="user_phone">user phone</string>
    <string name="gender">Gender</string>
    <string name="none">None</string>
    <string name="share_profile_pic_item">share_profile_pic_item</string>
    <string name="IMAGE_TYPE">image/*</string>
    <string name="SHARE_IMAGE_TITLE">Share Image</string>
    <string name="PICK_GENDER">Pick gender</string>
    <string name="TYPE_YOUR_STATUS">Type your status</string>
    <string name="SAVE">Save</string>
    <string name="CANCEL">Cancel</string>
    <string name="STATUS_EMPTY">status can\'t be empty</string>
    <string name="NAME_EMPTY">Name can\'t be empty</string>
    <string name="TYPE_YOUR_NAME">Type your name</string>
    <string name="contact_name">Contact name</string>
    <string name="message">message</string>
    <string name="_10_00">10:00</string>
    <string name="_0">0</string>
    <string name="one_account_allowed">one account allowed</string>
    <string name="default_notification_channel_id">1211992</string>
    <string name="fcm_message">sync contacts</string>
    <string name="showcontact">Show Contact</string>
    <string name="find">Find</string>
    <string name="create_call">create_call</string>
    <string name="create_video_call">create_video_call</string>
    <string name="delete_all_message">Delete All Message</string>
    <string name="block_contact">Block Contact</string>
    <string name="messageHint">הקלד הודעה</string>
    <string name="CONTACTS">Contacts</string>
    <string name="channel_name">התראות הודעה</string>
    <string name="channel_description">CHANNEL_DESC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">שלח</string>
    <string name="cancel">ביטול</string>
</resources>
