<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/show_contact"
        android:title="@string/showcontact"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/find"
        android:title="@string/find"
        app:showAsAction="never" />
    <item
        android:id="@+id/video_contact"
        android:title="@string/create_video_call"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_videocam_white"/>
    <item
        android:id="@+id/call_contact"
        app:showAsAction="ifRoom"
        android:title="@string/create_call"
        android:icon="@drawable/ic_phone_white"/>
    <item
        android:id="@+id/DeleteMessage"
        app:showAsAction="ifRoom"
        android:title="@string/delete_all_message"
        android:icon="@drawable/ic_phone_white"/>
    <item
    android:id="@+id/Block_user"
    app:showAsAction="ifRoom"
    android:title="@string/block_contact"
    android:icon="@drawable/ic_phone_white"/>



</menu>