<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/contact"
    android:clickable="true"
    android:focusable="true"
    android:background="@null"
    android:foreground="?android:selectableItemBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contact_img"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/profile_image"/>

    <RelativeLayout
        android:id="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/contact_img">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:text="@string/contact_name"/>

            <TextView
                android:id="@+id/contact_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:visibility="invisible"
                android:text="@string/phone_number"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/message"
            android:textAlignment="textEnd"
            android:textColor="#A9A9A9"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/last_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:maxLines="1"
            android:layout_marginEnd="50dp"
            android:text="@string/message"
            android:textAlignment="textEnd"
            android:textColor="#A9A9A9"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:id="@+id/end_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">

            <TextView
                android:id="@+id/last_message_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_00"/>

            <TextView
                android:id="@+id/circle_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/badge_circle"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>