<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/send_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number" />

        <Button
            android:id="@+id/send_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/send_verification_code"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:background="@drawable/circle_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verify_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="invisible">

        <EditText
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_verification_code" />

        <Button
            android:id="@+id/verify_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_code"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="15dp"/>

    </LinearLayout>

</RelativeLayout>